--- a/templates/modular.html.twig
+++ b/templates/modular.html.twig
@@ -50,7 +50,8 @@
 {% block content %}
     {{ page.content }}
     {% for module in page.collection() %}
-        <div id="{{ _self.pageLinkName(module.menu) }}"></div>
+        <div id="{{ _self.pageLinkName(module.menu) }}">
         {{ module.content }}
+        </div>
     {% endfor %}
 {% endblock %}
